name:                in-between
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/in-between#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Interval.Core
    , Data.Interval.Elementary
    , Data.Interval.SegmentMap
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/in-between
